Correction bogue dans taille en bits du message codé

--- a/Codage par paires d'octets.ipynb
+++ b/Codage par paires d'octets.ipynb
@@ -139,7 +139,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 445
         },
-        "outputId": "d23f064f-8c3b-43ef-b19e-6a95c557c48e"
+        "outputId": "883155e2-97a1-453b-d170-20015a9165aa"
       },
       "source": [
         "dictsymb = []  #Dictionnaire des substitutions\n",
@@ -169,6 +169,7 @@
         "            Message = Message.replace(paires[0][0], chr(debut))\n",
         "            LUToctetsdispo[debut] = False\n",
         "            dictsymb += [[paires[0][0], chr(debut)]]\n",
+        "            nbsymboles += 1\n",
         "        else:\n",
         "            print(\"Il n'y a plus d'octets disponible!\") #Bien sûr, ce n'est pas exact car la recherche commence à Message[0]\n",
         "        \n",
@@ -230,7 +231,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 51
         },
-        "outputId": "61162031-179d-46b7-9a8d-5eebda470613"
+        "outputId": "db3c5c14-a9c9-43ff-a070-8226db13c3d2"
       },
       "source": [
         "print(\"Longueur = {0}\".format(np.ceil(np.log2(nbsymboles))*len(Message)))\n",
@@ -241,25 +242,12 @@
         {
           "output_type": "stream",
           "text": [
-            "Longueur = 32.0\n",
+            "Longueur = 64.0\n",
             "Longueur originale = 88.0\n"
           ],
           "name": "stdout"
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "wyip2G2zjQow",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
