Ajout d'une note sur la longueur des messages avec le codage par paires octets

--- a/Codage par paires d'octets.ipynb
+++ b/Codage par paires d'octets.ipynb
@@ -115,7 +115,8 @@
         "        LUToctetsdispo[ord(Message[i])] = False  #Octet utilisé\n",
         "        nbsymboles += 1\n",
         "        \n",
-        "longueurOriginale = np.ceil(np.log2(nbsymboles))*len(Message)    "
+        "longueurOriginale = np.ceil(np.log2(nbsymboles))*len(Message)   \n",
+        "nboctets = len(Message) "
       ],
       "execution_count": 3,
       "outputs": []
@@ -139,7 +140,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 445
         },
-        "outputId": "883155e2-97a1-453b-d170-20015a9165aa"
+        "outputId": "58ccc37c-6358-4dbb-b476-592a3e1162f2"
       },
       "source": [
         "dictsymb = []  #Dictionnaire des substitutions\n",
@@ -231,7 +232,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 51
         },
-        "outputId": "db3c5c14-a9c9-43ff-a070-8226db13c3d2"
+        "outputId": "d1429917-c6fd-418d-ab01-d9192daf2b1b"
       },
       "source": [
         "print(\"Longueur = {0}\".format(np.ceil(np.log2(nbsymboles))*len(Message)))\n",
@@ -244,6 +245,43 @@
           "text": [
             "Longueur = 64.0\n",
             "Longueur originale = 88.0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Chyj1UDWcmmk",
+        "colab_type": "text"
+      },
+      "source": [
+        "Mais si on suit strictement la définition du codage par paires d'octets, les longueurs en octets sont:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "I34qgloDczqj",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "6efddf24-4325-486e-d1a2-7bfb7b388145"
+      },
+      "source": [
+        "print(\"Longueur = {0}\".format(len(Message)))\n",
+        "print(\"Longueur originale = {0}\".format(nboctets))"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Longueur = 16\n",
+            "Longueur originale = 44\n"
           ],
           "name": "stdout"
         }
